--- a/library.properties
+++ b/library.properties
@@ -1,8 +1,8 @@
 name=AS7331
-version=0.1.0
+version=0.2.0
 author=Rob Tillaart <rob.tillaart@gmail.com>
 maintainer=Rob Tillaart <rob.tillaart@gmail.com>
-sentence=Arduino library for the AS7331 UV sensor.
+sentence=Arduino library for the I2C AS7331 UV sensor.
 paragraph=UV-A, UV-B, UV-C, Celsius.
 category=Sensors
 url=https://github.com/RobTillaart/AS7331
